# tardigrade-micromorphic-element

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  LICENSE  ReadMe.md  ReadMe.mk  ReadMe.txt  config.mk  config.py  config.py.default  documentation_generator.py  environment.txt  finite_difference.py  hex8.py  reduced_environment.txt  run_tests.py  run_tests.py.default  setup.py  test.py
.github/workflows/: github-test.yml
doc/: micro_element_derivation.py
doc/DOF_gradients/: .gitignore  DOF gradients.ipynb  tensor_tools.py
doc/MatrixForm/: micromorphic_matrix_form.ipynb  tensor_tools.py
doc/ProgrammersManual/: .gitignore  ProgrammersManual.tex
doc/Proposal/: Micromorphic_Element_Proposal.tex  micromorphic.bib  presentation.tex
doc/Proposal/tex/: cost.tex  delivery.tex  documentation_plan.tex  introduction.tex  nomenclature.tex  software_environment.tex  technical_approach.tex
doc/Report/: .gitignore  Micromorphic_Element_Report.tex
doc/Report/tests/: process_tests.py
doc/Report/tests/regression_tests/const_u/: .gitignore
doc/Report/tex/: .gitignore  nomenclature.tex  technical_approach.tex  upcoming_enhancements.tex
doc/TheoryManual/: .gitignore  TheoryDerivation.tex  TheoryManual.tex
doc/UsersManual/: .gitignore  UsersManual.tex
doc/UsersManual/images/: .gitignore
docs/html/: index.html
docs/sphinx/: api.rst  build.txt  changelog.rst  conf.py.in  dependencies.txt  gitlab_setup.rst  targets.txt  user.rst
modulefiles/: micromorphic_element-env
recipe/: meta.yaml
src/abaqus/: .gitignore  hex8_linear_elasticity.inp
src/abaqus/tests/multi_element/: .gitignore  stretch_y.inp
src/abaqus/tests/single_element/: .gitignore  hex8.inp.default
src/cmake/: Config.cmake.in
src/cpp/: .gitignore  CMakeLists.txt  balance_equations.cpp  balance_equations.h  deformation_measures.cpp  deformation_measures.h  driver.cpp  driver.h  finite_difference.h  makefile  makefile-uel  makefile-uel.default  makefile.default  makefile_libmicrobalance  makefile_libmicrobalance.default  makefile_libmicromat  makefile_libmicromat.default  material_python_interface.cpp  material_python_interface.h  micro_element.cpp  micro_element.h  micromorphic_elasto_plasticity_interface.cpp  micromorphic_elasto_plasticity_interface.h  micromorphic_linear_elasticity.cpp  micromorphic_linear_elasticity.h  micromorphic_linear_elasticity_interface.cpp  micromorphic_linear_elasticity_interface.h  micromorphic_linear_elasticity_voigt.cpp  micromorphic_linear_elasticity_voigt.h  micromorphic_material_library.cpp  micromorphic_material_library.h  micromorphic_measures.cpp  micromorphic_measures.h  newton_krylov.cpp  newton_krylov.h  run_tests.py  run_tests.py.default  tardigrade_micromorphic_elasto_plasticity_interface.cpp  tardigrade_micromorphic_elasto_plasticity_interface.h  tardigrade_micromorphic_linear_elasticity_interface.cpp  (+5 more)
src/cpp/efficiency_tests/: .gitignore  makefile.default  makefile_profile.default  profile_code.cpp  tensor_multiplication.cpp
src/cpp/tests/: CMakeLists.txt  test_balance_equations.cpp  test_micromorphic_elasto_plasticity_interface.cpp  test_micromorphic_linear_elasticity_interface.cpp  test_tardigrade_micromorphic_elasto_plasticity_interface.cpp  test_tardigrade_micromorphic_linear_elasticity_interface.cpp
src/cpp/tests/balance_equations/: description.tex  makefile.default  test_balance_equations.cpp
src/cpp/tests/deformation_measures/: .gitignore  description.tex  makefile.default  test_deformation_measures.cpp
src/cpp/tests/finite_difference/: .gitignore  description.tex  makefile  test_finite_difference.cpp
src/cpp/tests/micro_element/: description.tex  makefile  makefile.default  test_micro_element.cpp
src/cpp/tests/micromorphic_linear_elasticity/: .gitignore  description.tex  makefile  makefile.default  test_micromorphic_linear_elasticity.cpp
src/cpp/tests/micromorphic_linear_elasticity_voigt/: .gitignore  description.tex  makefile.default  profile_code.cpp  test_micromorphic_linear_elasticity_voigt.cpp
src/cpp/tests/micromorphic_measures/: makefile.default  test_micromorphic_measures.cpp
src/cpp/tests/newton_krylov/: .gitignore  description.tex  makefile  makefile.default  makefile.txt  test_newton_krylov.cpp
src/cpp/tests/regression_tests/const_u/: const_u.inp
src/cpp/tests/regression_tests/linear_u/: linear_u.inp
src/cpp/tests/tensor/: .gitignore  description.tex  makefile  makefile.default  makefile.txt  test_tensor.cpp
src/python/: fea_driver.py  finite_difference.py  hex8.py  linear_elastic_parameter_constraint_equations.py  materials.pxd  materials.pyx  micro_element.py  micromorphic_linear_elasticity.py  parameter_constraint_equations.py  process_output.py  setup.py  test_parameter_constraint_equations.py  unittest.inp
src/python/tests/: test_micromorphic.py
src/python/tests/regression_tests/: regression.tex
src/python/tests/regression_tests/const_u/: const_u.inp
src/python/tests/regression_tests/linear_u/: linear_u.inp
src/python/tests/regression_tests/multi_element/stretch_y/: process.py
src/python/tests/unittests/: unittests.tex
